# newsmemory

./: pyproject.toml
.github/workflows/: lint.yml
api/: apps.py  errors.py  exceptions.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_fts.py
config/: settings.py  urls.py
src/newmemory/: __init__.py
