[project]
name = "newmemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sulfastor", email = "torresmoisesa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
